# CCT-FM

./: README.md
code-clinical-analysis/: README.md  pyproject.toml
code-clinical-analysis/src/: cohort_table1_by_sex.py  core.py  figures.py  multivariate_analysis.py  pairwise_analysis.py  permutation_tests.py  render_figure_3c_v3.py  render_main_figures.py  run_pipeline.py  supplementary_analyses.py  volume_only_analysis.py
code-clinical-analysis/src/config/: __init__.py
code-co2-emission/: README.md  compare_co2_emissions.py  compute_co2_emissions.py  pyproject.toml
code-co2-emission/data/: hardware_and_grid_config.json  model_computational_specs.csv
